<resources>
    <string name="app_name">ClientNeoWaiter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_input_name">Введите ваш логин</string>
    <string name="text_enter">Вход</string>
    <string name="text_login">Логин</string>
    <string name="text_password">Пароль</string>
    <string name="btn_login">Получить код</string>
    <string name="text_send_again">Отправить еще раз</string>
    <string name="btn_enter">Войти</string>
    <string name="text_code">Введите 4-х значный код,\n отправленный на номер %s</string>
    <string name="text_about_you">Расскажите о себе</string>
    <string name="text_name">Имя</string>
    <string name="text_our_name">Введите ваше имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_date">Дата рождения</string>
    <string name="text_input_surname">Введите вашу фамилию</string>
    <string name="text_input_date">01.01.1991</string>
    <string name="text_phone">Номер телефона</string>
    <string name="text_sun_work">Дневная смена с 10:00 до 17:00</string>
    <string name="text_moon_work">Вечерняя смена с 17:00 до 23:00</string>
    <string name="text_minus_work">Выходной</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="text_menu">Меню</string>
    <string name="text_no_notifications">Уведомлений нет</string>
    <string name="text_order">Заказы</string>
    <string name="text_busy">Занято</string>
    <string name="text_free">Свободно</string>
    <string name="text_choose">Выберите стол</string>
    <string name="text_new_order">Новый заказ</string>
    <string name="text_choosed">Стол №%s</string>
    <string name="text_result_sum">Итого: %d сом</string>
    <string name="btn_add">Добавить</string>
    <string name="text_number_order">Заказ №%d</string>
    <string name="text_order_btn">Заказ №%d</string>
    <string name="text_number">№ %d</string>
    <string name="text_opened_time">Открыт в %s</string>
    <string name="text_waiter">Официант: %s</string>
</resources>