<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.waiterneocafe.view.newOrder.NewOrderFragment">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_user_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_new_order"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_new_order"
        android:textSize="17dp"
        android:fontFamily="@font/sf_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/img_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_choose"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_choose"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_order" />

    <ImageView
        android:id="@+id/image_busy"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icn_busy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_choose" />

    <TextView
        android:id="@+id/text_busy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/text_busy"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/image_busy"
        app:layout_constraintTop_toBottomOf="@id/text_choose" />

    <ImageView
        android:id="@+id/image_free"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/icn_free"
        app:layout_constraintStart_toEndOf="@+id/text_busy"
        app:layout_constraintTop_toBottomOf="@id/text_choose" />

    <TextView
        android:id="@+id/text_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/sf_pro"
        android:text="@string/text_free"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/image_free"
        app:layout_constraintTop_toBottomOf="@id/text_choose" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_busy" />
</androidx.constraintlayout.widget.ConstraintLayout>