<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    tools:context="com.neobis.waiterneocafe.view.login.LoginFragment">


    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="172dp"
        android:layout_height="68dp"
        android:layout_marginTop="83dp"
        android:src="@drawable/img_logo_neocafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_enter"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_login"
        style="@style/TextGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_enter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_backgr_grey"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxBackgroundMode="none"
        app:startIconDrawable="@drawable/img_user"
        app:startIconTint="@color/grey_hint"
        app:startIconContentDescription="@string/text_input_name"
        app:startIconCheckable="true"
        android:paddingVertical="2dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="23dp"
            android:background="@drawable/button_backgr_grey"
            android:hint="@string/text_input_name"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/grey_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_password"
        style="@style/TextGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        style="@style/MyTextInputLayoutStyle"
        android:background="@drawable/button_backgr_grey"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:boxBackgroundMode="none"
        app:startIconDrawable="@drawable/img_lock"
        app:startIconTint="@color/grey_hint"
        android:paddingVertical="2dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="23dp"
            android:background="@drawable/button_backgr_grey"
            android:hint="Введите ваш пароль"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@color/grey_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_backgr_login"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="#FBFBFB"
        android:textSize="16dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>