<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgr"
    tools:context="com.example.waiterneocafe.view.login.CodeFragment">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:src="@drawable/img_logo_neocafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/pinView_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_error_code"
        >

        <EditText
            android:id="@+id/edit_code1"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/edit_code2"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/edit_code3"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"/>
        <EditText
            android:id="@+id/edit_code4"
            android:textColor="@color/black"
            android:textSize="40dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_active"
        android:text="@string/btn_enter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinView_code" />



    <ImageView
        android:id="@+id/image_back"
        android:layout_width="26dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/text_code"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <TextView
        android:id="@+id/text_send_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:textColor="@color/grey_hint"
        android:text="@string/text_send_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

</androidx.constraintlayout.widget.ConstraintLayout>